--- a/exhibition.html
+++ b/exhibition.html
@@ -117,128 +117,130 @@
 
     <!-- Start of Exhibition -->
 
-    <main class="exhibition-main-container">
 
-        <div class="exhibitions-info">
 
-            <section class="fromleft one">
+    <div class="exhibitions-info">
 
-                <p class="exhibition-year">2022</p>
+        <section class="fromleft one">
 
-                <div class="exhibitions">
-                    <p class="exhibition-title"><a href="./exhibitions/wanawari">wa na wari</a> </p>
-                    <p class="exhibition-venue"> wa na wari art space</p>
-                    <p class="exhibition-location">seatle,usa</p>
-                    <hr color="#800020">
-                </div>
+            <p class="exhibition-year">2022</p>
 
-                <div class="exhibitions">
-                    <p class="exhibition-title"> <a href="./exhibitions/youngcontemporaries">young contemporaries.</a>
-                    </p>
-                    <p class="exhibition-venue">rele arts foundation </p>
-                    <p class="exhibition-location">lagos,nigeria</p>
-                    <hr color="#800020">
-                </div>
+            <div class="exhibitions">
+                <p class="exhibition-title"><a href="./exhibitions/wanawari">wa na wari</a> </p>
+                <p class="exhibition-venue"> wa na wari art space</p>
+                <p class="exhibition-location">seatle,usa</p>
+                <hr color="#800020">
+            </div>
 
-            </section>
+            <div class="exhibitions">
+                <p class="exhibition-title"> <a href="./exhibitions/youngcontemporaries">young contemporaries.</a>
+                </p>
+                <p class="exhibition-venue">rele arts foundation </p>
+                <p class="exhibition-location">lagos,nigeria</p>
+                <hr color="#800020">
+            </div>
 
-            <section class="fromleft one">
+        </section>
 
-                <p class="exhibition-year">2021</p>
+        <section class="fromleft one">
 
-                <div class="exhibitions">
-                    <p class="exhibition-title"><a href="./exhibitions/taste-mystique"> taste:mystique <br> smithsonian
-                        </a>
-                    </p>
-                    <p class="exhibition-venue">lagos photo festival,</p>
-                    <p class="exhibition-location">lagos,nigeria</p>
-                    <hr color="#800020">
-                </div>
+            <p class="exhibition-year">2021</p>
 
-                <div class="exhibitions">
-                    <p class="exhibition-title"><a href="./exhibitions/boundariesofreason">boundaries of reason,</a></p>
-                    <p class="exhibition-venue">abuja photo festival,</p>
-                    <p class="exhibition-location">abuja,nigeria</p>
-                    <hr color="#800020">
-                </div>
+            <div class="exhibitions">
+                <p class="exhibition-title"><a href="./exhibitions/taste-mystique"> taste:mystique <br> smithsonian
+                    </a>
+                </p>
+                <p class="exhibition-venue">lagos photo festival,</p>
+                <p class="exhibition-location">lagos,nigeria</p>
+                <hr color="#800020">
+            </div>
 
-                <div class="exhibitions">
-                    <p class="exhibition-title"><a href="./exhibitions/no-victor-no-vanquished:theworldatthecrossroads">
-                            no victor,no vanquished:<br>
-                            the world at <br> the crossroads.</a></p>
-                    <p class="exhibition-venue">iwaya community art biennale,</p>
-                    <p class="exhibition-location">lagos,nigeria</p>
-                    <hr color="#800020">
-                </div>
+            <div class="exhibitions">
+                <p class="exhibition-title"><a href="./exhibitions/boundariesofreason">boundaries of reason,</a></p>
+                <p class="exhibition-venue">abuja photo festival,</p>
+                <p class="exhibition-location">abuja,nigeria</p>
+                <hr color="#800020">
+            </div>
 
-                <div class="exhibitions">
-                    <p class="exhibition-title"><a href="./exhibitions/youngphotographers">young photographers</a>
-                    </p>
-                    <p class="exhibition-venue">alliance francaise,</p>
-                    <p class="exhibition-location">lagos,nigeria</p>
-                    <hr color="#800020">
-                </div>
+            <div class="exhibitions">
+                <p class="exhibition-title"><a href="./exhibitions/no-victor-no-vanquished:theworldatthecrossroads">
+                        no victor,no vanquished:<br>
+                        the world at <br> the crossroads.</a></p>
+                <p class="exhibition-venue">iwaya community art biennale,</p>
+                <p class="exhibition-location">lagos,nigeria</p>
+                <hr color="#800020">
+            </div>
 
-                <div class="exhibitions">
-                    <p class="exhibition-title"><a href="./exhibitions/agathering">a gathering</a></p>
-                    <p class="exhibition-venue">ikollo gallery,</p>
-                    <p class="exhibition-location">lagos, nigeria.</p>
-                    <hr color="#800020">
-                </div>
+            <div class="exhibitions">
+                <p class="exhibition-title"><a href="./exhibitions/youngphotographers">young photographers</a>
+                </p>
+                <p class="exhibition-venue">alliance francaise,</p>
+                <p class="exhibition-location">lagos,nigeria</p>
+                <hr color="#800020">
+            </div>
 
-            </section>
+            <div class="exhibitions">
+                <p class="exhibition-title"><a href="./exhibitions/agathering">a gathering</a></p>
+                <p class="exhibition-venue">ikollo gallery,</p>
+                <p class="exhibition-location">lagos, nigeria.</p>
+                <hr color="#800020">
+            </div>
 
-            <section class="fromright">
+        </section>
 
-                <p class="exhibition-year">2020</p>
+        <section class="fromright">
 
-                <div class="exhibitions">
-                    <p class="exhibition-title"> <a href="./exhibitions/nigeria-trending-lagos-fringe">
-                            nigeria trending, <br> lagos fringe</a>
-                    </p>
-                    <p class="exhibition-venue">freedom park, <br> kongi`s harvest gallery,</p>
-                    <p class="exhibition-location">lagos,nigeria.</p>
-                    <hr color="#800020">
-                </div>
-                
+            <p class="exhibition-year">2020</p>
 
-                <div class="exhibitions">
-                    <p class="exhibition-title"><a href="./exhibitions/pain:a-discomfort-or-a-trigger">pain: a
-                            discomfort or <br> a
-                            trigger</a>
-                    </p>
-                    <p class="exhibition-venue">virtual exhibition,</p>
-                    <a class="exhibition-location link" target="_blank" rel="noreferrer"
-                        href="https://thepeaceexhibit.com/exhibitor/neec-nonso-pain-a-discomfort-or-a-trigger/">thepeaceexhibit.com</a>
-                    <hr color="#800020">
-                </div>
+            <div class="exhibitions">
+                <p class="exhibition-title"> <a href="./exhibitions/nigeria-trending-lagos-fringe">
+                        nigeria trending, <br> lagos fringe</a>
+                </p>
+                <p class="exhibition-venue">freedom park, <br> kongi`s harvest gallery,</p>
+                <p class="exhibition-location">lagos,nigeria.</p>
+                <hr color="#800020">
+            </div>
 
-            </section>
 
-            <section class="fromright">
+            <div class="exhibitions">
+                <p class="exhibition-title">pain: a
+                    discomfort or <br> a
+                    trigger</a>
+                </p>
+                <p class="exhibition-venue">virtual exhibition,</p>
+                <a class="exhibition-location link" target="_blank" rel="noreferrer"
+                    href="https://thepeaceexhibit.com/exhibitor/neec-nonso-pain-a-discomfort-or-a-trigger/">
+                    thepeaceexhibit.com
+                </a>
+                <hr color="#800020">
+            </div>
 
-                <p class="exhibition-year">2019</p>
+        </section>
 
-                <div class="exhibitions">
-                    <p class="exhibition-title"><a href="./exhibitions/yanga">yanga.</a></p>
-                    <p class="exhibition-venue">african artists foundation,</p>
-                    <p class="exhibition-location">lagos, nigeria.</p>
-                    <hr color="#800020">
-                </div>
+        <section class="fromright">
 
-                <div class="exhibitions">
-                    <p class="exhibition-title"><a href="./exhibitions/afrofutures">afro futures.</a></p>
-                    <p class="exhibition-venue">kungstgewerber museum,</p>
-                    <p class="exhibition-location">berlin,germany.</p>
-                    <hr class="" color="#800020">
+            <p class="exhibition-year">2019</p>
 
-                </div>
+            <div class="exhibitions">
+                <p class="exhibition-title"><a href="./exhibitions/yanga">yanga.</a></p>
+                <p class="exhibition-venue">african artists foundation,</p>
+                <p class="exhibition-location">lagos, nigeria.</p>
+                <hr color="#800020">
+            </div>
 
-            </section>
+            <div class="exhibitions">
+                <p class="exhibition-title"><a href="./exhibitions/afrofutures">afro futures.</a></p>
+                <p class="exhibition-venue">kungstgewerber museum,</p>
+                <p class="exhibition-location">berlin,germany.</p>
+                <hr class="" color="#800020">
 
-        </div>
+            </div>
 
-    </main>
+        </section>
+
+    </div>
+
+
 
 
     <!-- End of Exhibition -->
@@ -264,66 +266,66 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
-   <script>
-       gsap.from(".extra", {
-  scrollTrigger: {
-    trigger: ".exhibition-main-container",
-    start: -50, // when the top of the trigger hits the top of the viewport
-    end: "+=300", // end after scrolling 100px beyond the start
-    // markers: true
-    scrub: 1,
-  },
-  stagger: { amount: 0.5 },
-  scale: 0.8,
-  duration: 1,
-  ease: "power1.inOut",
-});
+    <script>
+        gsap.from(".extra", {
+            scrollTrigger: {
+                trigger: ".exhibitions-info",
+                start: -50, // when the top of the trigger hits the top of the viewport
+                end: "+=300", // end after scrolling 100px beyond the start
+                // markers: true
+                scrub: 1,
+            },
+            stagger: { amount: 0.5 },
+            scale: 0.8,
+            duration: 1,
+            ease: "power1.inOut",
+        });
 
-// Footer animation in and out
+        // Footer animation in and out
 
-gsap.from(".footer-container", {
-  scrollTrigger: {
-    trigger: ".exhibition-main-container",
-    start: -50, // when the top of the trigger hits the top of the viewport
-    end: "+=300", // end after scrolling 100px beyond the start
-    // markers: true
-    scrub: 1,
-  },
-  stagger: { amount: 0.5 },
-  scale: 0.5,
-  duration: 1,
-  ease: "power1.inOut",
-});
+        gsap.from(".footer-container", {
+            scrollTrigger: {
+                trigger: ".exhibitions-info",
+                start: -50, // when the top of the trigger hits the top of the viewport
+                end: "+=300", // end after scrolling 100px beyond the start
+                // markers: true
+                scrub: 1,
+            },
+            stagger: { amount: 0.5 },
+            scale: 0.5,
+            duration: 1,
+            ease: "power1.inOut",
+        });
 
-// Main exhibition animation in and out
-gsap.from(".exhibition-main-container", {
-  scrollTrigger: {
-    trigger: ".exhibition-main-container",
-    start: -100, // when the top of the trigger hits the top of the viewport
-    end: "+=300", // end after scrolling 100px beyond the start
-    // markers: true
-    scrub: 1,
-  },
-  stagger: { amount: 0.5 },
-  scale: 0.9,
-  duration: 1,
-  ease: "power1.inOut",
-});
+        // Main exhibition animation in and out
+        gsap.from(".exhibitions-info", {
+            scrollTrigger: {
+                trigger: ".exhibitions-info",
+                start: -100, // when the top of the trigger hits the top of the viewport
+                end: "+=300", // end after scrolling 100px beyond the start
+                // markers: true
+                scrub: 1,
+            },
+            stagger: { amount: 0.5 },
+            scale: 0.9,
+            duration: 1,
+            ease: "power1.inOut",
+        });
 
-// Timeline animation of the exhibition content on the whole page
-let tl = gsap.timeline({
-  scrollTrigger: {
-    trigger: ".exhibition-main-container",
-    //   markers: true,
-  },
-});
+        // Timeline animation of the exhibition content on the whole page
+        let tl = gsap.timeline({
+            scrollTrigger: {
+                trigger: ".exhibitions-info",
+                //   markers: true,
+            },
+        });
 
-tl.from(".exhibition-main-container", { x: -200, opacity: 0.5, duration: 1.5 })
-  .from(".App-logo", { y: -200, opacity: 0.5, duration: 1.5 })
-  .from(".list-item", { y: -200, opacity: 0.5, duration: 1.5 })
-  .from(".extra", { x: 200, opacity: 0, duration: 1.5 })
-  .from(".copyright", { y: 10, opacity: 0, duration: 1.5 });
-   </script>
+        tl.from(".exhibitions-info", { x: -200, opacity: 0.5, duration: 1.5 })
+            .from(".App-logo", { y: -200, opacity: 0.5, duration: 1.5 })
+            .from(".list-item", { y: -200, opacity: 0.5, duration: 1.5 })
+            .from(".extra", { x: 200, opacity: 0, duration: 1.5 })
+            .from(".copyright", { y: 10, opacity: 0, duration: 1.5 });
+    </script>
 
     <script src="script.js" async defer>
     </script>
