--- a/exhibitions/afrofutures.html
+++ b/exhibitions/afrofutures.html
@@ -115,32 +115,38 @@
 
     <!-- End of Navbar-->
 
- 
-        <div class="items-container">
 
-            <section class="exhibition-intro">
+    <div class="items-container">
 
-                <p class="exhibition-title"><a href="./afrofutures">afro futures.</a></p>
-                <p class="exhibition-venue">kungstgewerber museum,</p>
-                <p class="exhibition-location">berlin,germany.</p>
-            </section>
+        <section class="exhibition-intro">
 
-            <section class="agathering-intro">
-                <img src="../exhibition/afro futures - kungstgewerber museum, berlin, germany/1.webp" alt="">
-            </section>
+            <p class="exhibition-title"><a href="./afrofutures">afro futures.</a></p>
+            <p class="exhibition-venue">kungstgewerber museum,</p>
+            <p class="exhibition-location">berlin,germany.</p>
 
-            <section class="child-images">
-                <img src="../exhibition/afro futures - kungstgewerber museum, berlin, germany/2.webp" alt="">
-                <img src="../exhibition/afro futures - kungstgewerber museum, berlin, germany/3.webp" alt="">
-                <img src="../exhibition/afro futures - kungstgewerber museum, berlin, germany/4.webp" alt="">
-                <img src="../exhibition/afro futures - kungstgewerber museum, berlin, germany/5.webp" alt="">
-                <img src="../exhibition/afro futures - kungstgewerber museum, berlin, germany/6.webp" alt="">
-                <img src="../exhibition/afro futures - kungstgewerber museum, berlin, germany/7.webp" alt="">
-                <img src="../exhibition/afro futures - kungstgewerber museum, berlin, germany/8.webp" alt="">
+        </section>
 
-            </section>
+        <section class="agathering-intro">
+            <img src="../exhibition/afro futures - kungstgewerber museum, berlin, germany/1.webp" alt="afrofutures">
+        </section>
 
-        </div>
+        <section class="child-images">
+
+            <img src="../exhibition/afro futures - kungstgewerber museum, berlin, germany/2.webp" alt="afrofutures">
+            <img src="../exhibition/afro futures - kungstgewerber museum, berlin, germany/3.webp" alt="afrofutures">
+            <img src="../exhibition/afro futures - kungstgewerber museum, berlin, germany/4.webp" alt="afrofutures">
+            <img src="../exhibition/afro futures - kungstgewerber museum, berlin, germany/5.webp" alt="afrofutures">
+            <img src="../exhibition/afro futures - kungstgewerber museum, berlin, germany/6.webp" alt="afrofutures">
+            <img src="../exhibition/afro futures - kungstgewerber museum, berlin, germany/7.webp" alt="afrofutures">
+          
+        </section>
+
+
+        <section class="afrofuture-last-image">
+            <img src="../exhibition/afro futures - kungstgewerber museum, berlin, germany/8.webp" alt="afrofutures">
+        </section>
+
+    </div>
 
 
     <!-- Start of Footer -->
