--- a/exhibitions/yanga.html
+++ b/exhibitions/yanga.html
@@ -121,29 +121,28 @@
             <p class="exhibition-location">lagos, nigeria.</p>
         </section>
 
-        <section class="agathering-intro">
-            <img src="../exhibition/yanga - african artists foundation, lagos, nigeria/1.webp" alt="">
+        <section class="">
+            <img class="yanga-intro-image" name="slide" />
         </section>
 
         <section class="child-images">
-            <img src="../exhibition/yanga - african artists foundation, lagos, nigeria/2.webp" alt="">
-            <img src="../exhibition/yanga - african artists foundation, lagos, nigeria/3.webp" alt="">
             <img src="../exhibition/yanga - african artists foundation, lagos, nigeria/4.webp" alt="">
             <img src="../exhibition/yanga - african artists foundation, lagos, nigeria/5.webp" alt="">
             <img src="../exhibition/yanga - african artists foundation, lagos, nigeria/6.webp" alt="">
             <img src="../exhibition/yanga - african artists foundation, lagos, nigeria/7.webp" alt="">
             <img src="../exhibition/yanga - african artists foundation, lagos, nigeria/8.webp" alt="">
             <img src="../exhibition/yanga - african artists foundation, lagos, nigeria/9.webp" alt="">
-            <img src="../exhibition/yanga - african artists foundation, lagos, nigeria/10.webp" alt="">
         </section>
 
         <section class="potrait-images-exhibition">
             <img src="../exhibition/yanga - african artists foundation, lagos, nigeria/11.webp" alt="">
             <img src="../exhibition/yanga - african artists foundation, lagos, nigeria/12.webp" alt="">
             <img src="../exhibition/yanga - african artists foundation, lagos, nigeria/13.webp" alt="">
-          
-        
+
+
         </section>
+
+
 
     </div>
 
@@ -169,8 +168,39 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
 
+    <script>
+        var i = 0; // Start Point
+        var time = 3000; // Time Between Switch
+        var images = [
+            "../exhibition/yanga - african artists foundation, lagos, nigeria/1.webp",
+            "../exhibition/yanga - african artists foundation, lagos, nigeria/10.webp",
+        ];
+
+        function checkLength(array) {
+            // Check If Index Is Under Max
+            if (i < array.length - 1) {
+                // Add 1 to Index
+                i++;
+            } else {
+                // Reset Back To O
+                i = 0;
+            }
+        }
+
+
+        // Change Image
+        function changeImg() {
+            document.slide.src = images[i];
+            checkLength(images);
+            setTimeout("changeImg()", time);
+        }
+
+        window.onload = changeImg;
+    </script>
 
     <script src="../script.js" async defer></script>
+    <script src="../scripts/exhibitions.js"></script>
+    <script src="../scripts/gsap.js"></script>
 
 </body>
 
